--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bulma": "^0.7.5",
+    "font-awesome": "^4.7.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.1.1",
+    "react-toast-notifications": "^2.2.4",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
